--- a/_includes/404.html
+++ b/_includes/404.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-
 <!-- 404 page by https://codepen.io/gxash/pen/rrJYwm -->
-
 <html lang="en">
-
 {% include head.html %}
-
 <body class="bootstrap">
-
   <div class="container">
-
     <div class="wrapper p-5 text-center">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080">
-    
         <g id="Layer_12 yellow-back-fig" data-name="Layer 12">
           <path class="cls-1" d="M600.87,872H156a4,4,0,0,0-3.78,4.19h0a4,4,0,0,0,3.78,4.19H600.87a4,4,0,0,0,3.78-4.19h0A4,4,0,0,0,600.87,872Z"/>
           <rect class="cls-1" x="680.91" y="871.98" width="513.38" height="8.39" rx="4.19" ry="4.19"/>
@@ -129,16 +122,10 @@
           <path class="cls-5" d="M1021.29,654l-17.73,6.15,1.72,5.59-31.41,82.36c-19.35,32.53-66.3,36.72-75.56,16.68l-7.09-21.5L879,747.1l3.28,10.09-94.65,33.95c-11.49,2.29-11.85,15.79-2.61,17.84,0,0,39.11,3.66,103,9.5a92.75,92.75,0,0,0,40.89-5.29c44.32-16.56,57.73-50.67,57.73-50.67l26.82-67.26a1.37,1.37,0,0,1,2.53,0l1.42,3.33,17.75-7.62Z"/>
           <path class="cls-7" d="M1021.29,654l-17.73,6.15,1.72,5.59-31.41,82.36c-19.35,32.53-66.3,36.72-75.56,16.68l-7.09-21.5L879,747.1l3.28,10.09-94.65,33.95c-11.49,2.29-11.85,15.79-2.61,17.84,0,0,39.11,3.66,103,9.5a92.75,92.75,0,0,0,40.89-5.29c44.32-16.56,57.73-50.67,57.73-50.67l26.82-67.26a1.37,1.37,0,0,1,2.53,0l1.42,3.33,17.75-7.62Z"/>
         </g>
-    
       </svg>
-    
-      <h3>Page not Found!</h3>
+      <h3>Page Not Found!</h3>
       <a class="btn btn-outline-primary mt-1" href="{{ site.baseurl }}/">Go Back Home</a>
-    
     </div>
-
   </div>
-
 </body>
-
 </html>
